# sge

./: CMakeLists.txt  README.md
assets/images/: glitch-ilmenskie-svg.7z
cc/: component.cc  entity.cc  entitymanager.cc  gameconfigs.cc  player.cc  player.h  scene.cc  sge.cc  vec2.cc
include/sge/: component.h  entity.h  entitymanager.h  gameconfigs.h  scene.h  sge.h  transform.cc  transform.h  vec2.h
virtualspace/: CMakeLists.txt  main.cc  virtualspace.sge
virtualspace/assets/images/: mushrum_src.xcf
